--- a/meble_stomatologiczne.html
+++ b/meble_stomatologiczne.html
@@ -5,20 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meble stomatologiczne - R.S. Labor-Meble</title>
     <style>
-        body {
+      body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             margin: 0;
             padding: 0;
             display: flex;
             flex-direction: column;
             align-items: center;
-            background-color: #f4f4f4;
+            background: url('tlo_lista.jpg') center/cover fixed; /* Tło strony */
+            min-height: 100vh; /* Pełna wysokość widoku */
         }
 
         header {
             width: 100%;
             padding: 20px;
-            background-color: #333;
+            background-color: rgba(0, 0, 0, 0.7); /* Przezroczyste czarne tło */
             color: #fff;
             text-align: center;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -27,23 +28,28 @@
         h1 {
             margin: 0;
             font-size: 2em;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Cień dla tekstu */
         }
 
         .content {
             width: 80%;
             max-width: 1200px;
             margin: 20px;
-            background-color: #fff;
+        }
+
+        .product-container {
+            background-color: rgba(255, 255, 255, 0.9); /* Przezroczyste białe tło */
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            margin-bottom: 20px;
         }
 
         .product {
             display: flex;
             flex-wrap: wrap;
             justify-content: space-between;
-            margin-bottom: 20px;
+            align-items: center;
         }
 
         .product img {
@@ -68,7 +74,8 @@
 
         .back-link {
             text-align: center;
-            margin-top: 20px;
+            margin-top: 40px;
+            margin-bottom: 20px;
         }
 
         .back-link a {
@@ -89,13 +96,10 @@
         footer {
             width: 100%;
             padding: 20px;
-            background-color: #333;
+            background-color: rgba(0, 0, 0, 0.7); /* Przezroczyste czarne tło */
             color: #fff;
             text-align: center;
             margin-top: auto;
-            position: absolute;
-            bottom: 0;
-            left: 0;
         }
 
         .footer-content {
@@ -119,6 +123,11 @@
         .footer-social a:hover {
             color: #ccc;
         }
+
+        .footer-text {
+            flex: 1;
+            text-align: center;
+        }
     </style>
 </head>
 <body>
@@ -127,42 +136,48 @@
     </header>
 
     <div class="content">
-        <div class="product">
-            <img src="zdjecie1.jpg" alt="Mebel Protetyczny 1">
-            <img src="zdjecie2.jpg" alt="Mebel Protetyczny 1">
-            <img src="zdjecie3.jpg" alt="Mebel Protetyczny 1">
-            <div class="product-details">
-                <h2>Mebel Protetyczny 1</h2>
-                <p><strong>Opis:</strong> Nowoczesny mebel protetyczny zaprojektowany z myślą o ergonomii i funkcjonalności. Idealny do laboratoriów protetycznych.</p>
-                <p><strong>Cena:</strong> 3000 PLN</p>
-                <p><strong>Wymiary:</strong> 120 cm x 60 cm x 75 cm</p>
-                <p><strong>Materiał:</strong> Stal nierdzewna, MDF, szkło hartowane</p>
+        <div class="product-container">
+            <div class="product">
+                <img src="zdjecie1.jpg" alt="Mebel Protetyczny 1">
+                <img src="zdjecie2.jpg" alt="Mebel Protetyczny 1">
+                <img src="zdjecie3.jpg" alt="Mebel Protetyczny 1">
+                <div class="product-details">
+                    <h2>Mebel Protetyczny 1</h2>
+                    <p><strong>Opis:</strong> Nowoczesny mebel protetyczny zaprojektowany z myślą o ergonomii i funkcjonalności. Idealny do laboratoriów protetycznych.</p>
+                    <p><strong>Cena:</strong> 3000 PLN</p>
+                    <p><strong>Wymiary:</strong> 120 cm x 60 cm x 75 cm</p>
+                    <p><strong>Materiał:</strong> Stal nierdzewna, MDF, szkło hartowane</p>
+                </div>
             </div>
         </div>
 
-        <div class="product">
-            <img src="mebel2_1.jpg" alt="Mebel Protetyczny 2">
-            <img src="mebel2_2.jpg" alt="Mebel Protetyczny 2">
-            <img src="mebel2_3.jpg" alt="Mebel Protetyczny 2">
-            <div class="product-details">
-                <h2>Mebel Protetyczny 2</h2>
-                <p><strong>Opis:</strong> Stylowy mebel protetyczny, który łączy nowoczesny design z wysoką funkcjonalnością. Doskonały wybór dla profesjonalnych laboratoriów.</p>
-                <p><strong>Cena:</strong> 4500 PLN</p>
-                <p><strong>Wymiary:</strong> 140 cm x 70 cm x 80 cm</p>
-                <p><strong>Materiał:</strong> Aluminium, płyta laminowana, szkło hartowane</p>
+        <div class="product-container">
+            <div class="product">
+                <img src="mebel2_1.jpg" alt="Mebel Protetyczny 2">
+                <img src="mebel2_2.jpg" alt="Mebel Protetyczny 2">
+                <img src="mebel2_3.jpg" alt="Mebel Protetyczny 2">
+                <div class="product-details">
+                    <h2>Mebel Protetyczny 2</h2>
+                    <p><strong>Opis:</strong> Stylowy mebel protetyczny, który łączy nowoczesny design z wysoką funkcjonalnością. Doskonały wybór dla profesjonalnych laboratoriów.</p>
+                    <p><strong>Cena:</strong> 4500 PLN</p>
+                    <p><strong>Wymiary:</strong> 140 cm x 70 cm x 80 cm</p>
+                    <p><strong>Materiał:</strong> Aluminium, płyta laminowana, szkło hartowane</p>
+                </div>
             </div>
         </div>
 
-        <div class="product">
-            <img src="mebel3_1.jpg" alt="Mebel Protetyczny 3">
-            <img src="mebel3_2.jpg" alt="Mebel Protetyczny 3">
-            <img src="mebel3_3.jpg" alt="Mebel Protetyczny 3">
-            <div class="product-details">
-                <h2>Mebel Protetyczny 3</h2>
-                <p><strong>Opis:</strong> Kompaktowy mebel protetyczny, idealny do małych przestrzeni. Wyposażony w liczne schowki i powierzchnie robocze.</p>
-                <p><strong>Cena:</strong> 2500 PLN</p>
-                <p><strong>Wymiary:</strong> 100 cm x 50 cm x 70 cm</p>
-                <p><strong>Materiał:</strong> Stal nierdzewna, drewno, szkło hartowane</p>
+        <div class="product-container">
+            <div class="product">
+                <img src="mebel3_1.jpg" alt="Mebel Protetyczny 3">
+                <img src="mebel3_2.jpg" alt="Mebel Protetyczny 3">
+                <img src="mebel3_3.jpg" alt="Mebel Protetyczny 3">
+                <div class="product-details">
+                    <h2>Mebel Protetyczny 3</h2>
+                    <p><strong>Opis:</strong> Kompaktowy mebel protetyczny, idealny do małych przestrzeni. Wyposażony w liczne schowki i powierzchnie robocze.</p>
+                    <p><strong>Cena:</strong> 2500 PLN</p>
+                    <p><strong>Wymiary:</strong> 100 cm x 50 cm x 70 cm</p>
+                    <p><strong>Materiał:</strong> Stal nierdzewna, drewno, szkło hartowane</p>
+                </div>
             </div>
         </div>
     </div>
@@ -178,7 +193,7 @@
                 <a href="#"><i class="fab fa-twitter-square"></i></a>
                 <a href="#"><i class="fab fa-instagram-square"></i></a>
             </div>
-            <div>
+            <div class="footer-text">
                 © 2024 R.S Labor Meble
             </div>
         </div>
