--- a/meble_protetyczne.html
+++ b/meble_protetyczne.html
@@ -3,23 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meble Stomatologiczne - R.S. Labor-Meble</title>
+    <title>Meble stomatologiczne - R.S. Labor-Meble</title>
     <style>
-        body {
+      body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             margin: 0;
             padding: 0;
             display: flex;
             flex-direction: column;
             align-items: center;
-            background-color: #f4f4f4;
-            min-height: 100vh; /* Minimalna wysokość widoku */
+            background: url('tlo_lista.jpg') center/cover fixed; /* Tło strony */
+            min-height: 100vh; /* Pełna wysokość widoku */
         }
 
         header {
             width: 100%;
             padding: 20px;
-            background-color: #333;
+            background-color: rgba(0, 0, 0, 0.7); /* Przezroczyste czarne tło */
             color: #fff;
             text-align: center;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -28,38 +28,40 @@
         h1 {
             margin: 0;
             font-size: 2em;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Cień dla tekstu */
         }
 
         .content {
             width: 80%;
             max-width: 1200px;
             margin: 20px;
-            background-color: transparent; /* Przeźroczyste tło dla zawartości */
+        }
+
+        .product-container {
+            background-color: rgba(255, 255, 255, 0.9); /* Przezroczyste białe tło */
             padding: 20px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            margin-bottom: 20px;
         }
 
         .product {
-            width: 100%;
-            background-color: #fff; /* Tło dla pojedynczego produktu */
-            margin-bottom: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             display: flex;
+            flex-wrap: wrap;
             justify-content: space-between;
-            overflow: hidden; /* Zapobiega wyjściu zawartości poza ramy */
+            align-items: center;
         }
 
         .product img {
             width: 30%;
-            border-radius: 8px 0 0 8px;
+            margin-bottom: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
 
         .product-details {
             flex: 1;
-            padding: 20px;
+            margin-left: 20px;
         }
 
         .product-details h2 {
@@ -72,7 +74,8 @@
 
         .back-link {
             text-align: center;
-            margin-top: 20px;
+            margin-top: 40px;
+            margin-bottom: 20px;
         }
 
         .back-link a {
@@ -93,49 +96,88 @@
         footer {
             width: 100%;
             padding: 20px;
-            background-color: #333;
+            background-color: rgba(0, 0, 0, 0.7); /* Przezroczyste czarne tło */
             color: #fff;
             text-align: center;
-            margin-top: auto; /* Przesunięcie stopki na dół */
+            margin-top: auto;
+        }
+
+        .footer-content {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .footer-social {
+            display: flex;
+            gap: 10px;
+        }
+
+        .footer-social a {
+            color: #fff;
+            text-decoration: none;
+            font-size: 1.5em;
+            transition: color 0.3s ease;
+        }
+
+        .footer-social a:hover {
+            color: #ccc;
+        }
+
+        .footer-text {
+            flex: 1;
+            text-align: center;
         }
     </style>
 </head>
 <body>
     <header>
-        <h1>Meble Stomatologiczne</h1>
+        <h1>Meble Protetyczne</h1>
     </header>
 
     <div class="content">
-        <div class="product">
-            <img src="zdjecie1.jpg" alt="Mebel Stomatologiczny 1">
-            <div class="product-details">
-                <h2>Mebel Stomatologiczny 1</h2>
-                <p><strong>Opis:</strong> Nowoczesny mebel stomatologiczny zaprojektowany z myślą o komforcie pacjenta i efektywności pracy stomatologa.</p>
-                <p><strong>Cena:</strong> 3500 PLN</p>
-                <p><strong>Wymiary:</strong> 130 cm x 70 cm x 80 cm</p>
-                <p><strong>Materiał:</strong> Aluminium, skóra ekologiczna, stal nierdzewna</p>
+        <div class="product-container">
+            <div class="product">
+                <img src="zdjecie1.jpg" alt="Mebel Protetyczny 1">
+                <img src="zdjecie2.jpg" alt="Mebel Protetyczny 1">
+                <img src="zdjecie3.jpg" alt="Mebel Protetyczny 1">
+                <div class="product-details">
+                    <h2>Mebel Protetyczny 1</h2>
+                    <p><strong>Opis:</strong> Nowoczesny mebel protetyczny zaprojektowany z myślą o ergonomii i funkcjonalności. Idealny do laboratoriów protetycznych.</p>
+                    <p><strong>Cena:</strong> 3000 PLN</p>
+                    <p><strong>Wymiary:</strong> 120 cm x 60 cm x 75 cm</p>
+                    <p><strong>Materiał:</strong> Stal nierdzewna, MDF, szkło hartowane</p>
+                </div>
             </div>
         </div>
 
-        <div class="product">
-            <img src="mebel2_1.jpg" alt="Mebel Stomatologiczny 2">
-            <div class="product-details">
-                <h2>Mebel Stomatologiczny 2</h2>
-                <p><strong>Opis:</strong> Elegancki i funkcjonalny mebel stomatologiczny, doskonale sprawdzający się w nowoczesnych gabinetach dentystycznych.</p>
-                <p><strong>Cena:</strong> 4800 PLN</p>
-                <p><strong>Wymiary:</strong> 150 cm x 75 cm x 85 cm</p>
-                <p><strong>Materiał:</strong> Drewno dębowe, skóra naturalna, stal nierdzewna</p>
+        <div class="product-container">
+            <div class="product">
+                <img src="mebel2_1.jpg" alt="Mebel Protetyczny 2">
+                <img src="mebel2_2.jpg" alt="Mebel Protetyczny 2">
+                <img src="mebel2_3.jpg" alt="Mebel Protetyczny 2">
+                <div class="product-details">
+                    <h2>Mebel Protetyczny 2</h2>
+                    <p><strong>Opis:</strong> Stylowy mebel protetyczny, który łączy nowoczesny design z wysoką funkcjonalnością. Doskonały wybór dla profesjonalnych laboratoriów.</p>
+                    <p><strong>Cena:</strong> 4500 PLN</p>
+                    <p><strong>Wymiary:</strong> 140 cm x 70 cm x 80 cm</p>
+                    <p><strong>Materiał:</strong> Aluminium, płyta laminowana, szkło hartowane</p>
+                </div>
             </div>
         </div>
 
-        <div class="product">
-            <img src="mebel3_1.jpg" alt="Mebel Stomatologiczny 3">
-            <div class="product-details">
-                <h2>Mebel Stomatologiczny 3</h2>
-                <p><strong>Opis:</strong> Innowacyjny mebel stomatologiczny, zastosowanie najnowszych technologii w projektowaniu wygodnych i ergonomicznych rozwiązań.</p>
-                <p><strong>Cena:</strong> 3900 PLN</p>
-                <p><strong>Wymiary:</strong> 140 cm x 65 cm x 75 cm</p>
-                <p><strong>Materiał:</strong> Aluminium, skóra ekologiczna, szkło hartowane</p>
+        <div class="product-container">
+            <div class="product">
+                <img src="mebel3_1.jpg" alt="Mebel Protetyczny 3">
+                <img src="mebel3_2.jpg" alt="Mebel Protetyczny 3">
+                <img src="mebel3_3.jpg" alt="Mebel Protetyczny 3">
+                <div class="product-details">
+                    <h2>Mebel Protetyczny 3</h2>
+                    <p><strong>Opis:</strong> Kompaktowy mebel protetyczny, idealny do małych przestrzeni. Wyposażony w liczne schowki i powierzchnie robocze.</p>
+                    <p><strong>Cena:</strong> 2500 PLN</p>
+                    <p><strong>Wymiary:</strong> 100 cm x 50 cm x 70 cm</p>
+                    <p><strong>Materiał:</strong> Stal nierdzewna, drewno, szkło hartowane</p>
+                </div>
             </div>
         </div>
     </div>
@@ -145,7 +187,16 @@
     </div>
 
     <footer>
-        © 2024 R.S Labor Meble
+        <div class="footer-content">
+            <div class="footer-social">
+                <a href="#"><i class="fab fa-facebook-square"></i></a>
+                <a href="#"><i class="fab fa-twitter-square"></i></a>
+                <a href="#"><i class="fab fa-instagram-square"></i></a>
+            </div>
+            <div class="footer-text">
+                © 2024 R.S Labor Meble
+            </div>
+        </div>
     </footer>
 </body>
 </html>
