--- a/menu.html
+++ b/menu.html
@@ -95,7 +95,7 @@
         }
 
         .gallery img {
-            width: 70%;
+            width: calc(33.33% - 20px); /* 33.33% szerokości, minus marginesy */
             margin-bottom: 20px;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
