--- a/menu.html
+++ b/menu.html
@@ -105,7 +105,7 @@
             width: 100%;
             padding: 20px;
             background-color: #333;
-            color: #000; /* Zmiana koloru tekstu na czarny */
+            color: #FFF; /* Zmiana koloru tekstu na czarny */
             text-align: center;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             margin-top: auto;
