--- a/kontakt.html
+++ b/kontakt.html
@@ -102,7 +102,7 @@
     </div>
 
     <div class="back-link">
-        <a href="menu.html">Powrót do strony głównej</a>
+        <a href="index.html">Powrót do strony głównej</a>
     </div>
 
     <footer>
