--- a/meble_protetyczne.html
+++ b/meble_protetyczne.html
@@ -183,7 +183,7 @@
     </div>
 
     <div class="back-link">
-        <a href="menu.html">Powrót do strony głównej</a>
+        <a href="index.html">Powrót do strony głównej</a>
     </div>
 
     <footer>
