--- a/o_nas.html
+++ b/o_nas.html
@@ -104,7 +104,7 @@
     </div>
 
     <div class="back-link">
-        <a href="menu.html">Powrót do strony głównej</a>
+        <a href="index.html">Powrót do strony głównej</a>
     </div>
     <footer>
         © 2024 R.S Labor Meble
