--- a/urzadzenia_protetyczne.html
+++ b/urzadzenia_protetyczne.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meble stomatologiczne - R.S. Labor-Meble</title>
+    <title>Urzdzenia Protetyczne - R.S. Labor-Meble</title>
     <style>
       body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
