--- a/komis.html
+++ b/komis.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meble stomatologiczne - R.S. Labor-Meble</title>
+    <title>Komis Mebli i Urządzeń - R.S. Labor-Meble</title>
     <style>
       body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -138,11 +138,11 @@
     <div class="content">
         <div class="product-container">
             <div class="product">
-                <img src="zdjecie1.jpg" alt="Mebel Protetyczny 1">
-                <img src="zdjecie2.jpg" alt="Mebel Protetyczny 1">
-                <img src="zdjecie3.jpg" alt="Mebel Protetyczny 1">
+                <img src="zdjecie1.jpg" alt="Mebel lub urzadzenie 1">
+                <img src="zdjecie2.jpg" alt="Mebel lub urzadzenie 1">
+                <img src="zdjecie3.jpg" alt="Mebel lub urzadzenie 1">
                 <div class="product-details">
-                    <h2>Mebel Protetyczny 1</h2>
+                    <h2>Mebel lub urzadzenie 1</h2>
                     <p><strong>Opis:</strong> Nowoczesny mebel protetyczny zaprojektowany z myślą o ergonomii i funkcjonalności. Idealny do laboratoriów protetycznych.</p>
                     <p><strong>Cena:</strong> 3000 PLN</p>
                     <p><strong>Wymiary:</strong> 120 cm x 60 cm x 75 cm</p>
@@ -153,11 +153,11 @@
 
         <div class="product-container">
             <div class="product">
-                <img src="mebel2_1.jpg" alt="Mebel Protetyczny 2">
-                <img src="mebel2_2.jpg" alt="Mebel Protetyczny 2">
-                <img src="mebel2_3.jpg" alt="Mebel Protetyczny 2">
+                <img src="mebel2_1.jpg" alt="Mebel lub urzadzenie 2">
+                <img src="mebel2_2.jpg" alt="Mebel lub urzadzenie 2">
+                <img src="mebel2_3.jpg" alt="Mebel lub urzadzenie 2">
                 <div class="product-details">
-                    <h2>Mebel Protetyczny 2</h2>
+                    <h2>Mebel lub urzadzenie 2</h2>
                     <p><strong>Opis:</strong> Stylowy mebel protetyczny, który łączy nowoczesny design z wysoką funkcjonalnością. Doskonały wybór dla profesjonalnych laboratoriów.</p>
                     <p><strong>Cena:</strong> 4500 PLN</p>
                     <p><strong>Wymiary:</strong> 140 cm x 70 cm x 80 cm</p>
@@ -168,11 +168,11 @@
 
         <div class="product-container">
             <div class="product">
-                <img src="mebel3_1.jpg" alt="Mebel Protetyczny 3">
-                <img src="mebel3_2.jpg" alt="Mebel Protetyczny 3">
-                <img src="mebel3_3.jpg" alt="Mebel Protetyczny 3">
+                <img src="mebel3_1.jpg" alt="Mebel lub urzadzenie 3">
+                <img src="mebel3_2.jpg" alt="Mebel lub urzadzenie 3">
+                <img src="mebel3_3.jpg" alt="Mebel lub urzadzenie 3">
                 <div class="product-details">
-                    <h2>Mebel Protetyczny 3</h2>
+                    <h2>Mebel lub urzadzenie 3</h2>
                     <p><strong>Opis:</strong> Kompaktowy mebel protetyczny, idealny do małych przestrzeni. Wyposażony w liczne schowki i powierzchnie robocze.</p>
                     <p><strong>Cena:</strong> 2500 PLN</p>
                     <p><strong>Wymiary:</strong> 100 cm x 50 cm x 70 cm</p>
