--- a/meble_protetyczne.html
+++ b/meble_protetyczne.html
@@ -138,11 +138,11 @@
     <div class="content">
         <div class="product-container">
             <div class="product">
-                <img src="zdjecie1.jpg" alt="Mebel Protetyczny 1">
-                <img src="zdjecie2.jpg" alt="Mebel Protetyczny 1">
-                <img src="zdjecie3.jpg" alt="Mebel Protetyczny 1">
+                <img src="protetyczne1.jpg" alt="Mebel Protetyczny 3">
+                <img src="protetyczne2.jpg" alt="Mebel Protetyczny 3">
+                <img src="protetyczne3.jpg" alt="Mebel Protetyczny 3">
                 <div class="product-details">
-                    <h2>Mebel Protetyczny 1</h2>
+                    <h2>Biurko ENS-pro jednostanowiskowe</h2>
                     <p><strong>Opis:</strong> Nowoczesny mebel protetyczny zaprojektowany z myślą o ergonomii i funkcjonalności. Idealny do laboratoriów protetycznych.</p>
                     <p><strong>Cena:</strong> 3000 PLN</p>
                     <p><strong>Wymiary:</strong> 120 cm x 60 cm x 75 cm</p>
@@ -158,19 +158,20 @@
                 <img src="mebel2_3.jpg" alt="Mebel Protetyczny 2">
                 <div class="product-details">
                     <h2>Mebel Protetyczny 2</h2>
-                    <p><strong>Opis:</strong> Stylowy mebel protetyczny, który łączy nowoczesny design z wysoką funkcjonalnością. Doskonały wybór dla profesjonalnych laboratoriów.</p>
-                    <p><strong>Cena:</strong> 4500 PLN</p>
-                    <p><strong>Wymiary:</strong> 140 cm x 70 cm x 80 cm</p>
-                    <p><strong>Materiał:</strong> Aluminium, płyta laminowana, szkło hartowane</p>
+                    <p><strong>Opis:</strong> 
+Wyposażenie obejmuje instalację elektryczną z trzema gniazdami pod blatem oraz instalację powietrzną z dmuchawką. Zestaw zawiera także matę roboczą oraz prowadnice szuflad z funkcją cichego dotyku, a całość jest wykonana z konstrukcji aluminiowej.
+Opcje dodatkowe to możliwość instalacji gazowej, dodanie kobyłki (dwukrotnie), lampy oraz wyciągu pyłu. Istnieje również opcja zmiany koloru.</p>
+                    <p><strong>Cena:</strong> 4400 PLN</p>
+                    <p><strong>Wymiary:</strong> 150cm x 60 cm x 89 cm</p>
                 </div>
             </div>
         </div>
 
         <div class="product-container">
             <div class="product">
-                <img src="mebel3_1.jpg" alt="Mebel Protetyczny 3">
-                <img src="mebel3_2.jpg" alt="Mebel Protetyczny 3">
-                <img src="mebel3_3.jpg" alt="Mebel Protetyczny 3">
+                <img src="protetyczne.jpg" alt="Mebel Protetyczny 3">
+                <img src="protetyczne.jpg" alt="Mebel Protetyczny 3">
+                <img src="protetyczne.jpg" alt="Mebel Protetyczny 3">
                 <div class="product-details">
                     <h2>Mebel Protetyczny 3</h2>
                     <p><strong>Opis:</strong> Kompaktowy mebel protetyczny, idealny do małych przestrzeni. Wyposażony w liczne schowki i powierzchnie robocze.</p>
