--- a/meble_protetyczne.html
+++ b/meble_protetyczne.html
@@ -143,10 +143,10 @@
                 <img src="protetyczne3.jpg" alt="Mebel Protetyczny 3">
                 <div class="product-details">
                     <h2>Biurko ENS-pro jednostanowiskowe</h2>
-                    <p><strong>Opis:</strong> Nowoczesny mebel protetyczny zaprojektowany z myślą o ergonomii i funkcjonalności. Idealny do laboratoriów protetycznych.</p>
-                    <p><strong>Cena:</strong> 3000 PLN</p>
-                    <p><strong>Wymiary:</strong> 120 cm x 60 cm x 75 cm</p>
-                    <p><strong>Materiał:</strong> Stal nierdzewna, MDF, szkło hartowane</p>
+                    <p><strong>Opis:</strong>Wyposażenie obejmuje instalację elektryczną z trzema gniazdami pod blatem oraz instalację powietrzną z dmuchawką. Zestaw zawiera także matę roboczą oraz prowadnice szuflad z funkcją cichego dotyku, a całość jest wykonana z konstrukcji aluminiowej.
+Opcje dodatkowe to możliwość instalacji gazowej, dodanie kobyłki (dwukrotnie), lampy oraz wyciągu pyłu. Istnieje również opcja zmiany koloru.</p>
+                    <p><strong>Cena:</strong> 4400 PLN</p>
+                    <p><strong>Wymiary:</strong> 150cm x 60 cm x 89 cm </p>
                 </div>
             </div>
         </div>
