--- a/meble_protetyczne.html
+++ b/meble_protetyczne.html
@@ -153,31 +153,58 @@ Opcje dodatkowe to możliwość instalacji gazowej, dodanie kobyłki (dwukrotnie
 
         <div class="product-container">
             <div class="product">
-                <img src="mebel2_1.jpg" alt="Mebel Protetyczny 2">
-                <img src="mebel2_2.jpg" alt="Mebel Protetyczny 2">
-                <img src="mebel2_3.jpg" alt="Mebel Protetyczny 2">
+                <img src="protetyczne2_1.jpg" alt="Mebel Protetyczny 2">
+                <img src="protetyczne2_2.jpg" alt="Mebel Protetyczny 2">
                 <div class="product-details">
-                    <h2>Mebel Protetyczny 2</h2>
+                    <h2>Biurko Protetyczne Kavo</h2>
                     <p><strong>Opis:</strong> 
-Wyposażenie obejmuje instalację elektryczną z trzema gniazdami pod blatem oraz instalację powietrzną z dmuchawką. Zestaw zawiera także matę roboczą oraz prowadnice szuflad z funkcją cichego dotyku, a całość jest wykonana z konstrukcji aluminiowej.
-Opcje dodatkowe to możliwość instalacji gazowej, dodanie kobyłki (dwukrotnie), lampy oraz wyciągu pyłu. Istnieje również opcja zmiany koloru.</p>
-                    <p><strong>Cena:</strong> 4400 PLN</p>
-                    <p><strong>Wymiary:</strong> 150cm x 60 cm x 89 cm</p>
+Sprzedam dwustanowiskowe biurko protetyczne Kavo. Istnieje możliwość zamontowania kompletnego wyciągu Kavo, podłokietników, lampy oraz innych elementów według uznania klienta. Więcej informacji można uzyskać pod numerem telefonu.</p>
+                    <p><strong>Cena:</strong> 4900 PLN</p>
+                    <p><strong>Wymiary:</strong> Brak opisu </p>
                 </div>
             </div>
         </div>
 
         <div class="product-container">
             <div class="product">
-                <img src="protetyczne.jpg" alt="Mebel Protetyczny 3">
-                <img src="protetyczne.jpg" alt="Mebel Protetyczny 3">
-                <img src="protetyczne.jpg" alt="Mebel Protetyczny 3">
+                <img src="protetyczne3_1.jpg" alt="Mebel Protetyczny 3">
+                <img src="protetyczne3_2.jpg" alt="Mebel Protetyczny 3">
+                <img src="protetyczne3_3.jpg" alt="Mebel Protetyczny 3">
                 <div class="product-details">
-                    <h2>Mebel Protetyczny 3</h2>
-                    <p><strong>Opis:</strong> Kompaktowy mebel protetyczny, idealny do małych przestrzeni. Wyposażony w liczne schowki i powierzchnie robocze.</p>
-                    <p><strong>Cena:</strong> 2500 PLN</p>
-                    <p><strong>Wymiary:</strong> 100 cm x 50 cm x 70 cm</p>
-                    <p><strong>Materiał:</strong> Stal nierdzewna, drewno, szkło hartowane</p>
+                    <h2>Biurko Protetyczne v1</h2>
+                    <p><strong>Opis:</strong> Biurko protetyczne wyposażone w instalację elektryczną i powietrzną. Biurko posiada również kanał z przyłączem na wąż odkurzacza, który pasuje do większości kobyłek, takich jak np. Zubler. Istnieje możliwość modyfikacji według indywidualnych potrzeb. Więcej informacji pod numerem telefonu.</p>
+                    <p><strong>Cena:</strong> 4300 PLN</p>
+                    <p><strong>Wymiary:</strong> 150 cm x 60 cm x 88-90 cm</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+     <div class="product-container">
+            <div class="product">
+                <img src="protetyczne4_1.jpg" alt="Mebel Protetyczny 3">
+                <img src="protetyczne4_2.jpg" alt="Mebel Protetyczny 3">
+                <img src="protetyczne4_3.jpg" alt="Mebel Protetyczny 3">
+                <div class="product-details">
+                    <h2>Biurko Protetyczne v2</h2>
+                    <p><strong>Opis:</strong> Biurko protetyczne wyposażone jest w dwie dmuchawki sprężonego powietrza oraz instalację elektryczną podblatową z trzema gniazdami na każde stanowisko. Posiada dwa kanały pod kobyłkę, półkę na prace oraz dwie maty robocze. Istnieje możliwość dokupienia kobyłek, zmiany wymiarów i kolorystyki, a także instalacji gazowej z podwójnym zaworem. Więcej informacji pod numerem telefonu.</p>
+                    <p><strong>Cena:</strong> 5900 PLN</p>
+                    <p><strong>Wymiary:</strong> 270 cm x 60 cm x 87-90 cm</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="product-container">
+            <div class="product">
+                <img src="protetyczne5_1.jpg" alt="Mebel Protetyczny 3">
+                <img src="protetyczne5_2.jpg" alt="Mebel Protetyczny 3">
+                <img src="protetyczne5_3.jpg" alt="Mebel Protetyczny 3">
+                <div class="product-details">
+                    <h2>Biurko Protetyczne v3</h2>
+                    <p><strong>Opis:</strong>Sprzedam nowe biurko dwustanowiskowe wyposażone w instalację gazową na dwa palniki, a także instalację elektryczną i powietrzną. Biurko posiada półkę na prace. Istnieje możliwość zamontowania wyciągu lub zmiany wymiarów. Oferuję transport. Więcej informacji pod numerem telefonu.</p>
+                    <p><strong>Cena:</strong> 4900 PLN</p>
+                    <p><strong>Wymiary:</strong> 210 cm x 60 cm x 88-90 cm</p>
                 </div>
             </div>
         </div>
