--- a/meble_protetyczne.html
+++ b/meble_protetyczne.html
@@ -5,21 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meble Protetyczne - R.S. Labor-Meble</title>
     <style>
-      body {
+        body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             margin: 0;
             padding: 0;
             display: flex;
             flex-direction: column;
             align-items: center;
-            background: url('tlo_lista.jpg') center/cover fixed; /* Tło strony */
-            min-height: 100vh; /* Pełna wysokość widoku */
+            background: url('tlo_lista.jpg') center/cover fixed;
+            min-height: 100vh;
         }
 
         header {
             width: 100%;
             padding: 20px;
-            background-color: rgba(0, 0, 0, 0.7); /* Przezroczyste czarne tło */
+            background-color: rgba(0, 0, 0, 0.7);
             color: #fff;
             text-align: center;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -28,7 +28,7 @@
         h1 {
             margin: 0;
             font-size: 2em;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Cień dla tekstu */
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
         }
 
         .content {
@@ -38,7 +38,7 @@
         }
 
         .product-container {
-            background-color: rgba(255, 255, 255, 0.9); /* Przezroczyste białe tło */
+            background-color: rgba(255, 255, 255, 0.9);
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -54,6 +54,7 @@
 
         .product img {
             width: 30%;
+            height: auto;
             margin-bottom: 20px;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -96,7 +97,7 @@
         footer {
             width: 100%;
             padding: 20px;
-            background-color: rgba(0, 0, 0, 0.7); /* Przezroczyste czarne tło */
+            background-color: rgba(0, 0, 0, 0.7);
             color: #fff;
             text-align: center;
             margin-top: auto;
@@ -143,10 +144,9 @@
                 <img src="protetyczne3.jpg" alt="Mebel Protetyczny 3">
                 <div class="product-details">
                     <h2>Biurko ENS-pro jednostanowiskowe</h2>
-                    <p><strong>Opis:</strong>Wyposażenie obejmuje instalację elektryczną z trzema gniazdami pod blatem oraz instalację powietrzną z dmuchawką. Zestaw zawiera także matę roboczą oraz prowadnice szuflad z funkcją cichego dotyku, a całość jest wykonana z konstrukcji aluminiowej.
-Opcje dodatkowe to możliwość instalacji gazowej, dodanie kobyłki (dwukrotnie), lampy oraz wyciągu pyłu. Istnieje również opcja zmiany koloru.</p>
+                    <p><strong>Opis:</strong> Wyposażenie obejmuje instalację elektryczną z trzema gniazdami pod blatem oraz instalację powietrzną z dmuchawką. Zestaw zawiera także matę roboczą oraz prowadnice szuflad z funkcją cichego dotyku, a całość jest wykonana z konstrukcji aluminiowej. Opcje dodatkowe to możliwość instalacji gazowej, dodanie kobyłki (dwukrotnie), lampy oraz wyciągu pyłu. Istnieje również opcja zmiany koloru.</p>
                     <p><strong>Cena:</strong> 4400 PLN</p>
-                    <p><strong>Wymiary:</strong> 150cm x 60 cm x 89 cm </p>
+                    <p><strong>Wymiary:</strong> 150 cm x 60 cm x 89 cm</p>
                 </div>
             </div>
         </div>
@@ -157,10 +157,9 @@ Opcje dodatkowe to możliwość instalacji gazowej, dodanie kobyłki (dwukrotnie
                 <img src="protetyczne2_2.jpg" alt="Mebel Protetyczny 2">
                 <div class="product-details">
                     <h2>Biurko Protetyczne Kavo</h2>
-                    <p><strong>Opis:</strong> 
-Sprzedam dwustanowiskowe biurko protetyczne Kavo. Istnieje możliwość zamontowania kompletnego wyciągu Kavo, podłokietników, lampy oraz innych elementów według uznania klienta. Więcej informacji można uzyskać pod numerem telefonu.</p>
+                    <p><strong>Opis:</strong> Dwustanowiskowe biurko protetyczne Kavo. Istnieje możliwość zamontowania kompletnego wyciągu Kavo, podłokietników, lampy oraz innych elementów według uznania klienta. Więcej informacji można uzyskać pod numerem telefonu.</p>
                     <p><strong>Cena:</strong> 4900 PLN</p>
-                    <p><strong>Wymiary:</strong> Brak opisu </p>
+                    <p><strong>Wymiary:</strong> Brak opisu</p>
                 </div>
             </div>
         </div>
@@ -178,9 +177,8 @@ Sprzedam dwustanowiskowe biurko protetyczne Kavo. Istnieje możliwość zamontow
                 </div>
             </div>
         </div>
-    </div>
 
-     <div class="product-container">
+        <div class="product-container">
             <div class="product">
                 <img src="protetyczne4_1.jpg" alt="Mebel Protetyczny 3">
                 <img src="protetyczne4_2.jpg" alt="Mebel Protetyczny 3">
@@ -193,16 +191,15 @@ Sprzedam dwustanowiskowe biurko protetyczne Kavo. Istnieje możliwość zamontow
                 </div>
             </div>
         </div>
-    </div>
 
-    <div class="product-container">
+        <div class="product-container">
             <div class="product">
                 <img src="protetyczne5_1.jpg" alt="Mebel Protetyczny 3">
                 <img src="protetyczne5_2.jpg" alt="Mebel Protetyczny 3">
                 <img src="protetyczne5_3.jpg" alt="Mebel Protetyczny 3">
                 <div class="product-details">
                     <h2>Biurko Protetyczne v3</h2>
-                    <p><strong>Opis:</strong>Sprzedam nowe biurko dwustanowiskowe wyposażone w instalację gazową na dwa palniki, a także instalację elektryczną i powietrzną. Biurko posiada półkę na prace. Istnieje możliwość zamontowania wyciągu lub zmiany wymiarów. Oferuję transport. Więcej informacji pod numerem telefonu.</p>
+                    <p><strong>Opis:</strong> Sprzedam nowe biurko dwustanowiskowe wyposażone w instalację gazową na dwa palniki, a także instalację elektryczną i powietrzną. Biurko posiada półkę na prace. Istnieje możliwość zamontowania wyciągu lub zmiany wymiarów. Oferuję transport. Więcej informacji pod numerem telefonu.</p>
                     <p><strong>Cena:</strong> 4900 PLN</p>
                     <p><strong>Wymiary:</strong> 210 cm x 60 cm x 88-90 cm</p>
                 </div>
