--- a/meble_protetyczne.html
+++ b/meble_protetyczne.html
@@ -204,6 +204,57 @@
                     <p><strong>Wymiary:</strong> 210 cm x 60 cm x 88-90 cm</p>
                 </div>
             </div>
+
+              <div class="product-container">
+            <div class="product">
+                <img src="protetyczne6_1.jpg" alt="Mebel Protetyczny 3">
+                <img src="protetyczne6_2.jpg" alt="Mebel Protetyczny 3">
+                <div class="product-details">
+                    <h2>Biurko Protetyczne v4</h2>
+                    <p><strong>Opis:</strong> Biurko protetyczne ENS-pro jednostanowiskowe jest solidnie wykonane z płyty laminowanej, zarówno blat, jak i szafki, które są dostępne w różnych kolorach do wyboru. Szuflady zostały wyposażone w mechanizm cichego domyku, a nad kolanami znajduje się wkład stalowy. Biurko posiada instalację elektryczną oraz dmuchawki sprężonego powietrza, co zwiększa jego funkcjonalność.Dodatkowe opcje, które można zamontować, obejmują kobyłki, podłokietniki, instalację gazową, lampy oraz odciągi pyłu. Dzięki tym możliwościom biurko można dostosować do indywidualnych potrzeb użytkownika.</p>
+                    <p><strong>Cena:</strong> 4400 PLN</p>
+                    <p><strong>Wymiary:</strong> 150 cm x 60 cm x 87-90 cm</p>
+                </div>
+            </div>
+
+                    <div class="product-container">
+            <div class="product">
+                <img src="protetyczne7_1.jpg" alt="Mebel Protetyczny 3">
+                <img src="protetyczne7_2.jpg" alt="Mebel Protetyczny 3">
+                <img src="protetyczne7_3.jpg" alt="Mebel Protetyczny 3">
+                <div class="product-details">
+                    <h2>Biurko Protetyczne v5</h2>
+                    <p><strong>Opis:</strong> Biurko jednostanowiskowe cechuje się solidnym blatem wykonanym z litego buku oraz stabilnym stelażem aluminiowym. Szafki są wykonane z płyty laminowanej, dostępnej w różnych kolorach, co pozwala na dopasowanie do preferencji estetycznych. Szuflady wyposażone są w mechanizm cichego domyku, a nad kolanami znajduje się stalowy wkład do szuflad, zapewniający dodatkową wytrzymałość i funkcjonalność. Biurko jest wyposażone w instalację elektryczną oraz dmuchawki sprężonego powietrza, co umożliwia wygodne i efektywne wykonywanie pracy. Dodatkowo, istnieje możliwość rozbudowy biurka o kobyłki, podłokietniki, instalację gazową, lampy oraz odciągi pyłu, co pozwala na indywidualne dostosowanie do specyficznych potrzeb użytkownika.</p>
+                    <p><strong>Cena:</strong> 4400 PLN</p>
+                    <p><strong>Wymiary:</strong> 150 cm x 60 cm x 87-90 cm</p>
+                </div>
+            </div>
+
+                          <div class="product-container">
+            <div class="product">
+                <img src="protetyczne8_1.jpg" alt="Mebel Protetyczny 3">
+                <img src="protetyczne8_2.jpg" alt="Mebel Protetyczny 3">
+                <img src="protetyczne8_3.jpg" alt="Mebel Protetyczny 3">
+                <div class="product-details">
+                    <h2>Biurko Protetyczne v6</h2>
+                    <p><strong>Opis:</strong> Biurko protetyczne dwustanowiskowe oferuje dwie dmuchawki sprężonego powietrza oraz instalację elektryczną podblatową z trzema gniazdami na każde stanowisko. Posiada także dwa kanały pod kobyłkę, półkę na pracę oraz dwie maty robocze. Istnieje możliwość dokupienia dodatkowych kobyłek, zmiany wymiarów oraz kolorystyki. Dodatkowo, istnieje opcja instalacji gazowej z podwójnym zaworem, co zwiększa funkcjonalność biurka, umożliwiając dostosowanie go do specyficznych potrzeb użytkownika.</p>
+                    <p><strong>Cena:</strong> 5400 PLN</p>
+                    <p><strong>Wymiary:</strong> 210 cm x 60 cm x 87-90 cm</p>
+                </div>
+            </div>
+
+                                <div class="product-container">
+            <div class="product">
+                <img src="protetyczne9_1.jpg" alt="Mebel Protetyczny 3">
+                <img src="protetyczne9_2.jpg" alt="Mebel Protetyczny 3">
+                <img src="protetyczne9_3.jpg" alt="Mebel Protetyczny 3">
+                <div class="product-details">
+                    <h2>Biurko Protetyczne v7</h2>
+                    <p><strong>Opis:</strong> Oferta dotyczy biurka czterostanowiskowego, które charakteryzuje się solidnym blatem z litego buku oraz szafkami z płyty laminowanej, dostępnymi w różnych kolorach. Szuflady wyposażone są w mechanizm cichego domyku, a nad kolanami znajduje się wkład stalowy, zapewniający dodatkową wytrzymałość i stabilność. Biurko jest wyposażone w instalację elektryczną oraz dmuchawki sprężonego powietrza, co ułatwia pracę przy skomplikowanych zadaniach protetycznych.Dodatkowe opcje do wyboru obejmują możliwość montażu kobyłek, podłokietników, instalacji gazowej, lamp oraz odciągów pyłu, co pozwala na indywidualne dostosowanie biurka do potrzeb użytkownika oraz specyficznych wymagań miejsc pracy.</p>
+                    <p><strong>Cena:</strong> 13500 PLN</p>
+                    <p><strong>Wymiary:</strong> 160 cm x 160 cm x 88-90 cm</p>
+                </div>
+            </div>
         </div>
     </div>
 
