--- a/meble_protetyczne.html
+++ b/meble_protetyczne.html
@@ -204,6 +204,7 @@
                     <p><strong>Wymiary:</strong> 210 cm x 60 cm x 88-90 cm</p>
                 </div>
             </div>
+          </div>
 
               <div class="product-container">
             <div class="product">
@@ -216,6 +217,7 @@
                     <p><strong>Wymiary:</strong> 150 cm x 60 cm x 87-90 cm</p>
                 </div>
             </div>
+          </div>
 
                     <div class="product-container">
             <div class="product">
@@ -229,6 +231,7 @@
                     <p><strong>Wymiary:</strong> 150 cm x 60 cm x 87-90 cm</p>
                 </div>
             </div>
+          </div>
 
                           <div class="product-container">
             <div class="product">
@@ -242,6 +245,7 @@
                     <p><strong>Wymiary:</strong> 210 cm x 60 cm x 87-90 cm</p>
                 </div>
             </div>
+          </div>
 
                                 <div class="product-container">
             <div class="product">
