--- a/index.html
+++ b/index.html
@@ -1,145 +1,183 @@
-/* Globalne style */
-body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background: url('tlo.jpg') center/cover fixed; /* Tło strony */
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>R.S. Labor-Meble</title>
+    <style>
+        /* Globalne style */
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            background: url('tlo.jpg') center/cover fixed; /* Tło strony */
+        }
 
-header {
-    width: 100%;
-    padding: 20px;
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    position: relative;
-}
+        header {
+            width: 100%;
+            padding: 20px;
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            position: relative;
+        }
 
-header img {
-    width: 80px;
-    height: 80px;
-    border-radius: 50%;
-    margin-right: 10px;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
+        header img {
+            width: 80px;
+            height: 80px;
+            border-radius: 50%;
+            margin-right: 10px;
+            box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
 
-h1 {
-    margin: 3cm 0 0; /* Przesunięcie o 3 cm w dół */
-    font-size: 1.5em;
-    color: #FFF; /* Zmiana koloru tekstu na czarny */
-}
+        h1 {
+            margin: 3cm 0 0; /* Przesunięcie o 3 cm w dół */
+            font-size: 1.5em;
+            color: #FFF; /* Zmiana koloru tekstu na czarny */
+        }
 
-nav {
-    width: 100%;
-    padding: 10px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    margin-top: 20px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    background: rgba(255, 255, 255, 0.8); /* Tło dla odnośników */
-}
+        nav {
+            width: 100%;
+            padding: 10px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            margin-top: 20px;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-around;
+            background: rgba(255, 255, 255, 0.8); /* Tło dla odnośników */
+        }
 
-nav a {
-    flex-basis: calc(50% - 20px);
-    margin: 10px;
-    text-decoration: none;
-    color: #000; /* Zmiana koloru tekstu na czarny */
-    font-weight: bold;
-    padding: 20px;
-    border-radius: 8px;
-    transition: background-color 0.3s ease, transform 0.2s ease;
-    box-sizing: border-box;
-    text-align: center;
-    font-size: 1.2em;
-    position: relative;
-}
+        nav a {
+            flex-basis: calc(50% - 20px);
+            margin: 10px;
+            text-decoration: none;
+            color: #000; /* Zmiana koloru tekstu na czarny */
+            font-weight: bold;
+            padding: 20px;
+            border-radius: 8px;
+            transition: background-color 0.3s ease, transform 0.2s ease;
+            box-sizing: border-box;
+            text-align: center;
+            font-size: 1.2em;
+            position: relative;
+        }
 
-nav a::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: rgba(255, 255, 255, 0.5); /* Przezroczyste tło */
-    border-radius: 8px;
-}
+        nav a::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: rgba(255, 255, 255, 0.5); /* Przezroczyste tło */
+            border-radius: 8px;
+        }
 
-nav a:hover {
-    background-color: #555;
-    color: #fff;
-    transform: scale(1.05);
-}
+        nav a:hover {
+            background-color: #555;
+            color: #fff;
+            transform: scale(1.05);
+        }
 
-.gallery {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    margin: 20px;
-}
+        .gallery {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-around;
+            margin: 20px;
+        }
 
-.gallery img {
-    width: calc(33.33% - 20px); /* 33.33% szerokości, minus marginesy */
-    margin-bottom: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
+        .gallery img {
+            width: calc(33.33% - 20px); /* 33.33% szerokości, minus marginesy */
+            margin-bottom: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
 
-footer {
-    width: 100%;
-    padding: 20px;
-    background-color: #333;
-    color: #FFF; /* Zmiana koloru tekstu na czarny */
-    text-align: center;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    margin-top: auto;
-}
+        footer {
+            width: 100%;
+            padding: 20px;
+            background-color: #333;
+            color: #FFF; /* Zmiana koloru tekstu na czarny */
+            text-align: center;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            margin-top: auto;
+        }
 
-/* Media Queries dla telefonów komórkowych */
-@media (max-width: 767px) {
-    header {
-        padding: 10px;
-    }
+        /* Media Queries dla telefonów komórkowych */
+        @media (max-width: 767px) {
+            header {
+                padding: 10px;
+            }
 
-    header img {
-        width: 60px;
-        height: 60px;
-    }
+            header img {
+                width: 60px;
+                height: 60px;
+            }
 
-    h1 {
-        font-size: 1.2em;
-    }
+            h1 {
+                font-size: 1.2em;
+            }
 
-    nav {
-        padding: 5px;
-    }
+            nav {
+                padding: 5px;
+            }
 
-    nav a {
-        flex-basis: calc(100% - 20px);
-    }
+            nav a {
+                flex-basis: calc(100% - 20px);
+            }
 
-    .gallery img {
-        width: calc(50% - 20px);
-    }
-}
+            .gallery img {
+                width: calc(50% - 20px);
+            }
+        }
 
-/* Media Queries dla tabletów i większych ekranów */
-@media (min-width: 768px) {
-    nav a {
-        flex-basis: calc(33.33% - 20px);
-    }
+        /* Media Queries dla tabletów i większych ekranów */
+        @media (min-width: 768px) {
+            nav a {
+                flex-basis: calc(33.33% - 20px);
+            }
 
-    .gallery img {
-        width: calc(25% - 20px);
-    }
-}
+            .gallery img {
+                width: calc(25% - 20px);
+            }
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <img src="logo.png" alt="Logo Firmy">
+        <h1>R.S. Labor Meble</h1>
+    </header>
+
+    <nav>
+        <a href="meble_protetyczne.html">Meble protetyczne</a>
+        <a href="meble_stomatologiczne.html">Meble do gabinetów stomatologicznych</a>
+        <a href="urzadzenia_protetyczne.html">Urządzenia protetyczne</a>
+        <a href="komis.html">Komis mebli i urządzeń</a>
+        <a href="o_nas.html">O nas</a>
+        <a href="kontakt.html">Kontakt</a>
+    </nav>
+
+    <div class="gallery">
+        <img src="zdjecie1.jpg" alt="Zdjęcie 1">
+        <img src="zdjecie2.jpg" alt="Zdjęcie 2">
+        <img src="zdjecie3.jpg" alt="Zdjęcie 3">
+        <img src="zdjecie4.jpg" alt="Zdjęcie 4">
+        <img src="zdjecie5.jpg" alt="Zdjęcie 5">
+        <img src="zdjecie6.jpg" alt="Zdjęcie 6">
+    </div>
+
+    <footer>
+        © 2024 R.S Labor Meble
+    </footer>
+</body>
+</html>
