--- a/meble_protetyczne.html
+++ b/meble_protetyczne.html
@@ -129,6 +129,43 @@
             flex: 1;
             text-align: center;
         }
+
+        /* Media Queries dla responsywności */
+
+        /* Dla urządzeń o szerokości maksymalnie 767px */
+        @media (max-width: 767px) {
+            .product {
+                flex-direction: column;
+                text-align: center;
+            }
+
+            .product img {
+                width: 100%;
+                max-width: 300px;
+            }
+
+            .product-details {
+                margin-left: 0;
+                margin-top: 20px;
+            }
+
+            .back-link {
+                margin-top: 20px;
+                margin-bottom: 10px;
+            }
+        }
+
+        /* Dla urządzeń o szerokości od 768px */
+        @media (min-width: 768px) {
+            .product img {
+                width: 40%;
+                max-width: 400px;
+            }
+
+            .product-details {
+                margin-left: 40px;
+            }
+        }
     </style>
 </head>
 <body>
