--- a/meble_protetyczne.html
+++ b/meble_protetyczne.html
@@ -49,7 +49,7 @@
             display: flex;
             flex-wrap: wrap;
             justify-content: space-between;
-            align-items: center;
+            align-items: flex-start; /* Ustawienie startowego wyrównania dla elementów */
         }
 
         .product img {
@@ -63,6 +63,7 @@
         .product-details {
             flex: 1;
             margin-left: 20px;
+            text-align: left; /* Wyrównanie tekstu do lewej strony */
         }
 
         .product-details h2 {
