--- a/meble_protetyczne.html
+++ b/meble_protetyczne.html
@@ -53,7 +53,7 @@
         }
 
         .product img {
-            width: 30%;
+            width: 100%; /* Zdjęcie zajmuje 100% szerokości kontenera */
             height: auto;
             margin-bottom: 20px;
             border-radius: 8px;
@@ -62,7 +62,7 @@
 
         .product-details {
             flex: 1;
-            margin-left: 20px;
+            margin-top: 20px; /* Margines na górze opisu */
             text-align: left; /* Wyrównanie tekstu do lewej strony */
         }
 
